--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Putri & Levi Wedding Invitation</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
-      padding: 0;
       font-family: 'Montserrat', sans-serif;
       background: url('assets/background.jpg') no-repeat center center/cover;
       color: #222;
@@ -17,8 +20,8 @@
 
     .overlay {
       background: rgba(255, 255, 255, 0.95);
-      padding: 4rem 2rem;
       min-height: 100vh;
+      padding: 4rem 2rem;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -58,39 +61,104 @@
       margin-top: 1rem;
     }
 
-    audio {
-      display: none;
+    /* 🎉 Popup Styling */
+    .popup {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0, 0, 0, 0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
     }
 
-    /* ✨ Fade-in Animations */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(20px);
-      animation: fadeInUp 1s ease forwards;
+    .popup-box {
+      background: white;
+      padding: 2rem;
+      max-width: 90%;
+      border-radius: 15px;
+      text-align: center;
+      animation: fadeIn 0.6s ease forwards;
     }
 
-    .fade-delay-1 { animation-delay: 0.5s; }
-    .fade-delay-2 { animation-delay: 1s; }
-    .fade-delay-3 { animation-delay: 1.5s; }
-    .fade-delay-4 { animation-delay: 2s; }
-    .fade-delay-5 { animation-delay: 2.5s; }
-    .fade-delay-6 { animation-delay: 3s; }
+    .popup-box h3 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
 
-    @keyframes fadeInUp {
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+    .popup-box p {
+      margin-bottom: 1.5rem;
+    }
+
+    .popup-box button {
+      padding: 0.7rem 1.5rem;
+      border: none;
+      background-color: #aa4b6b;
+      color: white;
+      font-weight: bold;
+      font-size: 1rem;
+      border-radius: 30px;
+      cursor: pointer;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     @media (max-width: 600px) {
-      h1 {
-        font-size: 2.8rem;
-      }
+      h1 { font-size: 2.8rem; }
     }
   </style>
+</head>
+<body>
 
+  <!-- 🌟 Popup -->
+  <div class="popup" id="popup">
+    <div class="popup-box">
+      <h3>You're Invited!</h3>
+      <p>To the wedding of<br><strong>Putri & Levi</strong></p>
+      <button onclick="closePopup()">Open Invitation</button>
+    </div>
+  </div>
+
+  <!-- 💌 Invitation Section -->
+  <div class="overlay" id="main-content" style="display:none;">
+    <div id="guest-name"></div>
+    <h2>WITH THEIR FEET IN THE SAND</h2>
+    <h1>Putri Fatimah Aspari</h1>
+    <h1>&</h1>
+    <h1>Levi Adam Hansen</h1>
+
+    <p>invite you to join them as they exchange marriage vows at the yacht wedding reception.</p>
+    <p><strong>Sunday, November 30, 2025</strong><br>at 05:00 PM</p>
+
+    <p><strong>The Shivana Bespoke</strong><br>
+      📍 <a href="https://maps.app.goo.gl/AjGb4hgiXtAybJ786" target="_blank">View Location on Google Maps</a>
+    </p>
+
+    <p><em>Reception to follow</em></p>
+  </div>
+
+  <!-- 🎵 Background Music -->
+  <audio id="bg-music" autoplay muted loop preload="auto">
+    <source src="romantic-song.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
+
+  <!-- 🎯 Script -->
   <script>
+    const audio = document.getElementById("bg-music");
+
+    function closePopup() {
+      document.getElementById("popup").style.display = "none";
+      document.getElementById("main-content").style.display = "block";
+      audio.muted = false;
+      audio.play().catch(() => {});
+    }
+
     window.addEventListener('DOMContentLoaded', () => {
       // Nama tamu dari URL
       const params = new URLSearchParams(window.location.search);
@@ -98,41 +166,8 @@
       if (guest) {
         document.getElementById('guest-name').textContent = `Dear ${decodeURIComponent(guest)},`;
       }
-
-      // Auto play music on user interaction (mobile friendly)
-      const audio = document.getElementById("bg-music");
-      const playAudio = () => {
-        audio.play().catch(() => { /* ignored */ });
-        document.removeEventListener('click', playAudio);
-        document.removeEventListener('touchstart', playAudio);
-      };
-      document.addEventListener('click', playAudio);
-      document.addEventListener('touchstart', playAudio);
     });
   </script>
-</head>
-<body>
-  <div class="overlay">
-    <div id="guest-name" class="fade-in fade-delay-1"></div>
-    <h2 class="fade-in fade-delay-2">WITH THEIR FEET IN THE SAND</h2>
-    <h1 class="fade-in fade-delay-3">Putri Fatimah Aspari</h1>
-    <h1 class="fade-in fade-delay-4">&</h1>
-    <h1 class="fade-in fade-delay-5">Levi Adam Hansen</h1>
 
-    <p class="fade-in fade-delay-6">invite you to join them as they exchange marriage vows at the yacht wedding reception.</p>
-    <p class="fade-in fade-delay-6"><strong>Sunday, November 30, 2025</strong><br>at 05:00 PM</p>
-
-    <p class="fade-in fade-delay-6"><strong>The Shivana Bespoke</strong><br>
-      📍 <a href="https://maps.app.goo.gl/AjGb4hgiXtAybJ786" target="_blank">View Location on Google Maps</a>
-    </p>
-
-    <p class="fade-in fade-delay-6"><em>Reception to follow</em></p>
-  </div>
-
-  <!-- 🎵 Background music -->
-  <audio id="bg-music" autoplay loop>
-    <source src="romantic-song.mp3" type="audio/mpeg" />
-    Your browser does not support the audio element.
-  </audio>
 </body>
 </html>
