--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <h2>Location</h2>
   <p>The ceremony and dinner will take place at:</p>
   <h3>The Shivanna Bespoke</h3>
-  <img src="https://i.imgur.com/LUB7Z7s.jpeg" alt="venue" class="location-img">
+  <img src="assets/venue.jpg" alt="venue" class="location-img">
   <div class="rsvp-button">
     <a href="https://maps.app.goo.gl/ZKCPfC6DJHXeRWpJA" target="_blank">Open Map</a>
   </div>
