--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
       width: 100%;
       margin-bottom: 20px;
     }
+    h1, h2, h3, p, .scroll-icon {
+      opacity: 0;
+      transform: translateY(20px);
+      transition: opacity 1s ease, transform 1s ease;
+    }
+    .fade-in {
+      opacity: 1 !important;
+      transform: translateY(0) !important;
+    }
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 2.2em;
@@ -117,30 +126,30 @@
     <!-- Section 1 -->
     <div class="section">
       <div class="bow"></div>
-      <h1>Putri Fatimah Aspari</h1>
-      <h1>&</h1>
-      <h1>Levi Adam Hansen</h1>
-      <div class="scroll-icon">⬇</div>
+      <h1 class="fade">Putri Fatimah Aspari</h1>
+      <h1 class="fade">&</h1>
+      <h1 class="fade">Levi Adam Hansen</h1>
+      <div class="scroll-icon fade">⬇</div>
     </div><!-- Section 2 -->
 <div class="section">
-  <h2>Dear Friends!</h2>
-  <p>We would love to celebrate our special day surrounded by our beloved family and friends.</p>
-  <p>Please join us!</p>
-  <h2>Sunday, 30 November 2025</h2>
-  <p>05:00 PM</p>
-  <div class="scroll-icon">⬇</div>
+  <h2 class="fade">Dear Friends!</h2>
+  <p class="fade">We would love to celebrate our special day surrounded by our beloved family and friends.</p>
+  <p class="fade">Please join us!</p>
+  <h2 class="fade">Sunday, 30 November 2025</h2>
+  <p class="fade">05:00 PM</p>
+  <div class="scroll-icon fade">⬇</div>
 </div>
 
 <!-- Section 3 -->
 <div class="section">
-  <h2>Location</h2>
-  <p>The ceremony and dinner will take place at:</p>
-  <h3>The Shivanna Bespoke</h3>
-  <img src="assets/venue.jpg" alt="venue" class="location-img">
-  <div class="rsvp-button">
+  <h2 class="fade">Location</h2>
+  <p class="fade">The ceremony and dinner will take place at:</p>
+  <h3 class="fade">The Shivanna Bespoke</h3>
+  <img src="assets/venue.jpg" alt="venue" class="location-img fade">
+  <div class="rsvp-button fade">
     <a href="https://maps.app.goo.gl/ZKCPfC6DJHXeRWpJA" target="_blank">Open Map</a>
   </div>
-  <div class="time-schedule">
+  <div class="time-schedule fade">
     <p>15:00 - Guest Arrival</p>
     <p>16:00 - Ceremony</p>
     <p>17:00 - Dinner Reception</p>
@@ -149,9 +158,9 @@
 
 <!-- Section 4 -->
 <div class="section">
-  <h2>RSVP</h2>
-  <p>We truly hope you can join us on this special occasion. Please confirm your attendance.</p>
-  <div class="rsvp-button">
+  <h2 class="fade">RSVP</h2>
+  <p class="fade">We truly hope you can join us on this special occasion. Please confirm your attendance.</p>
+  <div class="rsvp-button fade">
     <a href="#">RSVP</a>
   </div>
 </div>
@@ -161,5 +170,20 @@
       document.getElementById("welcomePopup").style.display = "none";
       document.getElementById("bgMusic").play();
     }
+
+    // Scroll animation for fade-in
+    const fadeElements = document.querySelectorAll('.fade');
+
+    function handleScroll() {
+      fadeElements.forEach(el => {
+        const rect = el.getBoundingClientRect();
+        if (rect.top < window.innerHeight - 50) {
+          el.classList.add('fade-in');
+        }
+      });
+    }
+
+    window.addEventListener('scroll', handleScroll);
+    window.addEventListener('load', handleScroll);
   </script></body>
 </html>
