--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       box-sizing: border-box;
       margin: 0;
       padding: 0;
+      scroll-behavior: smooth;
     }
     body {
       font-family: 'Open Sans', sans-serif;
@@ -21,16 +22,16 @@
       overflow-x: hidden;
     }
     .section {
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding: 40px 20px;
+      padding: 20px;
       text-align: center;
     }
     .bow {
-      background: url('https://i.imgur.com/5Z2a5v2.png') no-repeat center;
+      background: url('assets/background.jpg') no-repeat center;
       background-size: contain;
       height: 80px;
       width: 100%;
@@ -48,19 +49,28 @@
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 2.2em;
-      margin: 10px 0;
+      margin: 5px 0;
     }
     h2 {
       font-size: 1.3em;
-      margin-bottom: 10px;
+      margin: 5px 0;
     }
     p {
-      margin: 10px 0;
+      margin: 6px 0;
     }
     .scroll-icon {
-      margin-top: 20px;
+      margin-top: 10px;
       animation: bounce 2s infinite;
-      font-size: 1.5em;
+      font-size: 2em;
+    }
+    .triangle-down {
+      width: 0;
+      height: 0;
+      border-left: 10px solid transparent;
+      border-right: 10px solid transparent;
+      border-top: 12px solid #333;
+      margin-top: 10px;
+      animation: bounce 2s infinite;
     }
     @keyframes bounce {
       0%, 100% { transform: translateY(0); }
@@ -69,12 +79,12 @@
     .location-img {
       width: 100%;
       border-radius: 8px;
-      margin: 15px 0;
+      margin: 10px 0;
     }
     .rsvp-button a {
       background-color: #d6336c;
       color: #fff;
-      padding: 12px 30px;
+      padding: 10px 25px;
       border-radius: 30px;
       text-decoration: none;
       font-weight: bold;
@@ -83,7 +93,7 @@
       background-color: #a0204f;
     }
     .time-schedule {
-      margin-top: 20px;
+      margin-top: 15px;
     }
     .popup {
       position: fixed;
@@ -129,7 +139,7 @@
       <h1 class="fade">Putri Fatimah Aspari</h1>
       <h1 class="fade">&</h1>
       <h1 class="fade">Levi Adam Hansen</h1>
-      <div class="scroll-icon fade">⬇</div>
+      <div class="triangle-down fade"></div>
     </div><!-- Section 2 -->
 <div class="section">
   <h2 class="fade">Dear Friends!</h2>
@@ -137,7 +147,7 @@
   <p class="fade">Please join us!</p>
   <h2 class="fade">Sunday, 30 November 2025</h2>
   <p class="fade">05:00 PM</p>
-  <div class="scroll-icon fade">⬇</div>
+  <div class="triangle-down fade"></div>
 </div>
 
 <!-- Section 3 -->
@@ -177,7 +187,7 @@
     function handleScroll() {
       fadeElements.forEach(el => {
         const rect = el.getBoundingClientRect();
-        if (rect.top < window.innerHeight - 50) {
+        if (rect.top < window.innerHeight - 80) {
           el.classList.add('fade-in');
         }
       });
