--- a/index.html
+++ b/index.html
@@ -107,9 +107,17 @@
     }
     .popup-content {
       background: #fff;
-      padding: 30px;
+      padding: 30px 25px;
       border-radius: 12px;
       text-align: center;
+      max-width: 300px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    }
+    .popup-content h2 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 1.8em;
+      color: #d6336c;
+      margin-bottom: 10px;
     }
     .popup-content button {
       margin-top: 20px;
@@ -120,15 +128,15 @@
       border-radius: 25px;
       font-weight: bold;
       cursor: pointer;
+      font-size: 1em;
     }
   </style>
 </head>
 <body>
   <div class="popup" id="welcomePopup">
     <div class="popup-content">
-      <h2>Welcome to Our Wedding</h2>
-      <p>We’re so happy you’re here!</p>
-      <button onclick="startExperience()">Enter</button>
+      <h2>Our Happy Moment Begins Now</h2>
+      <button onclick="startExperience()">ENTER</button>
     </div>
   </div>  <audio id="bgMusic" loop>
     <source src="assets/romantic-song.mp3" type="audio/mp3">
