--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
   <!-- 🎵 Music -->
   <audio id="bg-music" autoplay muted loop preload="auto">
-    <source src="romantic-song.mp3" type="audio/mpeg">
+    <source src="assets/romantic-song.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
