--- a/index.html
+++ b/index.html
@@ -156,10 +156,11 @@
     <p class="fade-slide fade-delay-4"><strong>Sunday, November 30, 2025</strong><br>at 05:00 PM</p>
 
     <p class="fade-slide fade-delay-5"><strong>The Shivana Bespoke</strong><br>
-      📍 <a href="https://maps.app.goo.gl/AjGb4hgiXtAybJ786" target="_blank">View Location on Google Maps</a>
+      📍 <a href="https://maps.app.goo.gl/fas1fannjcLXWgDD9" target="_blank">Meeting Point Location on Google Maps</a>
     </p>
 
-    <p class="fade-slide fade-delay-5"><em>Reception to follow</em></p>
+    <p class="fade-slide fade-delay-5"><em>For the presence and blessings of all of you, we say</em></p>
+    <h1 class="fade-slide fade-delay-5"><em>Thank You</em></h1>
   </div>
 
   <!-- 🎵 Music -->
