--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
     <h1 class="fade-slide fade-delay-3">Levi Adam Hansen</h1>
 
     <p class="fade-slide fade-delay-4">invite you to join them as they exchange marriage vows at the yacht wedding reception.</p>
-    <p class="fade-slide fade-delay-4"><strong>Sunday, November 30, 2025</strong><br>at 05:00 PM</p>
+    <p class="fade-slide fade-delay-4"><strong>Sunday, November 30, 2025</strong><br>at 05:00 - 09:00 PM</p>
 
-    <p class="fade-slide fade-delay-5"><strong>The Shivana Bespoke</strong><br>
-      📍 <a href="https://maps.app.goo.gl/fas1fannjcLXWgDD9" target="_blank">Meeting Point Location on Google Maps</a>
+    <p class="fade-slide fade-delay-5"><strong>THE SHIVANNA BESPOKE</strong><br>
+      📍 <a href="https://maps.app.goo.gl/fas1fannjcLXWgDD9" target="_blank">Meeting Point Location Maps</a>
     </p>
 
     <p class="fade-slide fade-delay-5"><em>For the presence and blessings of all of you, we say</em></p>
