--- a/index.html
+++ b/index.html
@@ -64,13 +64,14 @@
     /* 💌 Welcome Popup */
     .popup {
       position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
+     inset: 0;
+      width: 100vw; height: 100dvh;
       background: rgba(0, 0, 0, 0.6);
       display: flex;
       align-items: center;
       justify-content: center;
       z-index: 999;
+      overflow: hidden;
     }
 
     .popup-box {
