--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       margin: 0;
       font-family: 'Montserrat', sans-serif;
       background: url('assets/background.jpg') no-repeat center center/cover;
-      background-attachment: fixed;
       background-size: cover;
       height: 100vh;
       overflow: hidden;
+      text-align: center;
     }
 
     .overlay {
